# analogik

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANDASTUDIO_IMPROVEMENTS.md  Makefile  README.md  SCENE_EDITOR_PROPOSAL.md  SHADER_OPTIMIZATION_COMPLETE.md  VITE_MIGRATION_COMPLETE.md  electrobun.config.ts  get.php  index.html  manda-projects-1.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/actions/: action.yml
.github/workflows/: workflow.yml
.reports/: cleanup-summary.md
electron/: main.js  menu.js  package.json  preload.js  windowState.js
electron/scripts/: afterPack.js
manda-projects-2026-02-12/: manifest.json
nfo/: analogik.nfo  copy.sh
public/: chiptune2.js  index.html  manifest.json
public/mods/: blbblb_xmas.xm  willbe_minidrktow.it
public/mods/2000/: kenet_beauty.mod  kenet_paris.xm  ks_htones.xm  (+12 more)
report/: COMPLETE_OPTIMIZATION_SUMMARY.md  GIT_COMMIT_MESSAGE.txt  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  QUICK_REFERENCE.md  README.md  dead-code-analysis.md  phase-3-4-5-summary.md  react-guideline.md
src/: ActivateAudio.js  App.css  App.js  AppAudio.js  authors.js  config.ts  index.js  tools.js  tracks.js  tsconfig.json  utils.js  vite-env.d.ts  webpack.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Components/: AboutDrawer.js  AuthorList.js  ConfigVariations.js  Loader.js  PlayListDrawer.js  PlayerControl.js  RenderCanvas.tsx  TrackList.js  YearList.js  sparks.js  testClass.ts
src/hooks/: useWindowResize.js
(+168 files in other folders)
