[package]
name = "analogik-musicdisk"
version = "2.0.0"
description = "Analogik Music Disk - Chiptune Player with WebGL Visualizations"
authors = ["med/analogik <cyril.pereira@gmail.com>"]
edition = "2021"

[lib]
name = "analogik_musicdisk_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
